--- a/components/Testimonials/components/Card.module.css
+++ b/components/Testimonials/components/Card.module.css
@@ -1,9 +1,18 @@
-.card {
+.cardDesktop {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    height: 200px;
   }
+  .cardMobile {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 150px;
+  }
+
 
   .title {
     font-family: Greycliff CF, sans-serif;
@@ -14,16 +23,3 @@
     margin-top: var(--mantine-spacing-xs);
   }
 
-  .category {
-    color: var(--mantine-color-white);
-    opacity: 0.7;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-  /* .avatar {
-    width: 60;
-    height: 60;
-    border-radius: 50;
-    overflow: 'hidden';
-    position: 'relative';
-  } */
