workingOnCard backround color and text cleaned up

--- a/components/Testimonials/components/Card.module.css
+++ b/components/Testimonials/components/Card.module.css
@@ -17,9 +17,9 @@
   .title {
     font-family: Greycliff CF, sans-serif;
     font-weight: 900;
-    color: var(--mantine-color-white);
+    color: var(--mantine-color-black);
     line-height: 1.2;
-    font-size: rem(32px);
+    font-size: rem(16px);
     margin-top: var(--mantine-spacing-xs);
   }
 
